<resources>
    <string name="app_name">Personal Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now"><u>Sign Up now</u></string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_now"><u>Sign In Now</u></string>
    <string name="role">Role</string>
    <string-array name="role">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="homepage">Homepage</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="hello">Hello,</string>
    <string name="quiz_csv_title">Quiz CSV Title</string>
    <string name="import_csv">Import CSV</string>
    <string name="title">Title</string>
    <string name="quiz_id">Quiz ID</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="title_activity_countdown">countdownActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="quiz_starting_in">Quiz Starting In</string>
    <string name="_3">3</string>
    <string name="created_by">Created at</string>
    <string name="upload_csv">Upload CSV</string>
    <string name="amount">Amount: %s</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="time_in_seconds">Time in Seconds</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>

    <string-array name="time_in_seconds">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>


</resources>