<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.screens.AddQuiz.AddQuizFragment"
    android:background="@drawable/bg3"
    >

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddQuizId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quiz_id" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvShowFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_bg"
                android:hint="@string/upload_csv"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColorHint="@color/black" />

            <ImageView
                android:id="@+id/ivAddCSV"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_upload" />
        </FrameLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/time_in_seconds" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="15dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:background="@drawable/tv_bg"-->
<!--        android:paddingHorizontal="15dp"-->
<!--        android:paddingVertical="10dp">-->

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/tvSeekbarAmount"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:text="@string/amount"   />-->

<!--        <androidx.appcompat.widget.AppCompatSeekBar-->
<!--            android:id="@+id/seekBarProgress"-->
<!--            style="@style/Widget.AppCompat.SeekBar.Discrete"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:max="60"-->
<!--            android:min="5"-->
<!--            android:progress="10" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add_quiz"
        app:cornerRadius="5dp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>