<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:background="@drawable/bg3">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/quiz_logo" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login"
                android:textAllCaps="true"
                app:cornerRadius="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSignUpNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_up_now"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--    <LinearLayout-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:orientation="horizontal"-->
            <!--        android:gravity="center"-->
            <!--        android:layout_marginTop="35dp"-->
            <!--        >-->

            <!--        <View-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="1dp"-->
            <!--            android:background="@color/white"-->
            <!--            android:layout_gravity="center"-->
            <!--            />-->

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:text="@string/or"-->
            <!--            android:textColor="@color/white"-->
            <!--            android:layout_marginHorizontal="15dp"-->
            <!--            />-->

            <!--        <View-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="1dp"-->
            <!--            android:background="@color/white"-->
            <!--            android:layout_gravity="center"-->
            <!--            />-->

            <!--    </LinearLayout>-->


            <!--    <com.google.android.gms.common.SignInButton-->
            <!--        android:id="@+id/signIn_google"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Google"-->
            <!--        android:layout_gravity="center"-->
            <!--        />-->
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/llLoading"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/white"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical">-->

<!--            <com.airbnb.lottie.LottieAnimationView-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_width="350dp"-->
<!--                android:layout_height="350dp"-->
<!--                app:lottie_rawRes="@raw/anim2"-->
<!--                app:lottie_loop="true"-->
<!--                app:lottie_autoPlay="true"-->
<!--                />-->
<!--        </LinearLayout>-->

    </FrameLayout>
</LinearLayout>
