<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.Teacher.TeacherHomeFragment"
    android:background="@drawable/bg3">


    <LinearLayout
        android:id="@+id/llShowFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:layout_marginHorizontal="15dp">

                <ImageView
                    android:id="@+id/ivLogout"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_logout"
                    android:translationZ="90dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/tabColor"
                    android:padding="5dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="70dp">

                            <ImageView
                                android:id="@+id/ivImage"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/teacher1"
                                android:scaleType="fitXY"
                                />
                        </androidx.cardview.widget.CardView>

                        <ImageView
                            android:id="@+id/ivAdd"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_add"
                            android:layout_gravity="end|bottom"
                            android:translationZ="90dp"/>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp">


                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:text="@string/email"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/tvRole"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:text="@string/role"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuizItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:padding="15dp" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/llLoading"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:background="@color/white"-->
<!--        >-->

<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:layout_width="350dp"-->
<!--            android:layout_height="350dp"-->
<!--            android:layout_gravity="center"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_loop="true"-->
<!--            app:lottie_rawRes="@raw/anim2" />-->
<!--    </LinearLayout>-->

</FrameLayout>